Refactored DeepAOANet pipeline: AOAmain for prepare, train, eval; AOAtrain for building network

--- a/myAOAnet.ipynb
+++ b/myAOAnet.ipynb
@@ -10462,8 +10462,7 @@
    "id": "824b43be",
    "metadata": {},
    "source": [
-    "### Build end-to-end Encoder+FC model\n",
-    "Perform poorer than two-stage inference"
+    "### Build end-to-end Encoder+FC model"
    ]
   },
   {
